3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Partially revert patch from 2006-31-12: girdles are not armours for wearing restrictions.
 server/apply.c player.c
Ryo 2007-01-20

configure.ac: add --disable-logger flag to not build cflogger plugin, courtesy gros.
----
Implement partially feature request #656194: It should be possible to curse and bless.
Added 2 new spells, 'curse item' and 'bless item', that work on marked item.
Also changed the spell name matching logic, to always return if a perfect match is found.
 include/spells.h sproto.h
 server/spell_effect.c spell_util.c
Ryo 2007-01-15

types/{dummy.c, Makefile.in, Makefile.am}, include/typesproto.h: Remove dummy
   file now that it's no longer necessary
Alex Schultz 2007-01-14

Implement feature request #817585: altars don't take group of same logical item.
Checking logic is now modified to take into account other items apart last dropped item.
This is mainly done by changing check_altar_sacrifice().
 common/button.c: improve check_altar_sacrifice().
 include/libproto.h: update prototype for check_altar_sacrifice().
 server/apply.c: don't remove items, we don't care what we should remove.
 
----
Implement feature request #778211: allow avatars and holy servants to be random.
Changed determine_holy_arch to return one random item instead of first matching one.
 server/gods.c
----
Rename 'new_save_map' to 'save_map'.
 common/map.c
 crossedit/Edit.c
 include/libproto.h
 random_maps/standalone.c
 server/c_wiz.c server.c swap.c weather.c
----
 common/map.c: fix memory leak.
 server/skill_util.c: give a dummy name if skill doesn't have it. Avoids crashing later on :)
Ryo 2007-01-14
