@@ -140,6 +140,7 @@ extern const char* const spellpathnames[NRSPELLPATHS];
 /* This is for the force subtypes */
 #define FORCE_CONFUSION		1
 #define FORCE_CHANGE_ABILITY	2
+#define FORCE_TRANSFORMED_ITEM  3
 
 #define PATH_TIME_MULT(op,spell) (((op->path_attuned & spell->path_attuned) ? 0.8 : 1) * \
 				((op->path_repelled & spell->path_attuned) ? 1.25 : 1))
